# job-scraper

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config-example.yaml  job-example.json  pyproject.toml  run_daily.sh  setup.sh
.github/workflows/: scraper-health.yml
job_scraper/: __main__.py  main.py
job_scraper/config/: __init__.py  settings.py
job_scraper/llm/: __init__.py  filter.py
job_scraper/scraper/: __init__.py  browser.py  justjoinit_scraper.py  mock_job_board.py  protocol_scraper.py
job_scraper/storage/: __init__.py  file_storage.py  results_storage.py  sqlite_storage.py  yaml_storage.py
job_scraper/ui/: review.py
job_scraper/utils/: __init__.py  logger.py  rate_limiter.py
src/job_scraper/: __init__.py  exceptions.py  main.py  schema.py
src/job_scraper/api/: main.py
src/job_scraper/api/static/: add_job.html  events.html  index.html  manifest.json  rejected_review.html  review.html  stats.html
src/job_scraper/config/: __init__.py  settings.py
src/job_scraper/llm/: filter.py
src/job_scraper/scraper/: __init__.py  base.py  justjoinit_scraper.py  local_scraper.py  nofluff_scraper.py  protocol_scraper.py
src/job_scraper/storage/: DDL.py  __init__.py  migrate.py  results_storage.py
src/job_scraper/ui/: add_job.py  rejected_review.py  review.py
src/job_scraper/utils/: __init__.py  logger.py  rate_limiter.py  scraper.py
tests/integration/: conftest.py  test_scraper_health.py
tests/scrapers/: test_justjoinit.py  test_nofluff.py  test_protocol.py
