[project]
name = "job-scraper"
version = "0.1.0"
description = "Intelligent job scraper with AI-powered filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
