[project]
name = "job-scraper"
version = "0.1.0"
description = "Intelligent job scraper with AI-powered filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "playwright>=1.58.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = ["E501", "E722"]  # line length enforced by formatter, not linter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
