[project]
name = "job-scraper"
version = "0.1.0"
description = "Intelligent job scraper with AI-powered filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "playwright>=1.58.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "RUF",  # ruff-specific rules
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
job-scraper = "job_scraper.main:cli"
serve = "job_scraper.api.main:serve"
serve-dev = "job_scraper.api.main:serve_dev"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
